[project]
name = "comfyui-x-rework"
description = "This is a plugin for ComfyUI that adds new Util Nodes and Nodes for easier image creation and sharing."
version = "1.4.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Blonicx/ComfyUI-X-Rework"

[tool.comfy]
PublisherId = "blonicx"
DisplayName = "ComfyUI-X-Rework"
Icon = "./assets/img/Logo.png"